fix cache-path-plugin-note on mobile

--- a/admin/css/fastcgi-cache-purge-and-preload-nginx.css
+++ b/admin/css/fastcgi-cache-purge-and-preload-nginx.css
@@ -1979,3 +1979,17 @@ button.nppp-preload-btn[disabled] {
     padding: 5px;
     font-size: 12.5px;
 }
+
+/* Show line breaks on screens wider than 768px (e.g., tablets and desktops) */
+@media (min-width: 768px) {
+    .cache-path-plugin-note .line-break {
+        display: inline;
+    }
+}
+
+/* Hide line breaks on screens narrower than 768px (e.g., mobile devices) */
+@media (max-width: 767px) {
+    .cache-path-plugin-note .line-break {
+        display: none;
+    }
+}
